создание связи между пользователем и задачами
