# internal/handlers/taskHandlers.go
@@ -3,21 +3,24 @@ package handlers
 import (
 	"context"
 	"pet_project_1_etap/internal/taskService"
+	"pet_project_1_etap/internal/userService"
 	"pet_project_1_etap/internal/web/tasks"
 )
 
 type Handler struct {
-	Service *taskService.TaskService
+	TaskService *taskService.TaskService
+	UserService *userService.UserService
 }
 
-func NewHandler(service *taskService.TaskService) *Handler {
+func NewHandler(taskService *taskService.TaskService, userService *userService.UserService) *Handler {
 	return &Handler{
-		Service: service,
+		TaskService: taskService,
+		UserService: userService,
 	}
 }
 
 func (h *Handler) GetTasks(ctx context.Context, request tasks.GetTasksRequestObject) (tasks.GetTasksResponseObject, error) {
-	allTasks, err := h.Service.GetAllTasks()
+	allTasks, err := h.TaskService.GetAllTasks()
 	if err != nil {
 		return nil, err
 	}
@@ -28,6 +31,7 @@ func (h *Handler) GetTasks(ctx context.Context, request tasks.GetTasksRequestObj
 			Id:     &tsk.ID,
 			Task:   &tsk.Task,
 			IsDone: &tsk.IsDone,
+			UserId: &tsk.UserID,
 		}
 		response = append(response, task)
 	}
@@ -35,15 +39,15 @@ func (h *Handler) GetTasks(ctx context.Context, request tasks.GetTasksRequestObj
 }
 
 func (h *Handler) PostTasks(_ context.Context, request tasks.PostTasksRequestObject) (tasks.PostTasksResponseObject, error) {
-
 	taskRequest := request.Body
 
 	taskToCreate := taskService.Task{
 		Task:   *taskRequest.Task,
 		IsDone: *taskRequest.IsDone,
+		UserID: *taskRequest.UserId,
 	}
-	createdTask, err := h.Service.CreateTask(taskToCreate)
 
+	createdTask, err := h.TaskService.CreateTask(taskToCreate)
 	if err != nil {
 		return nil, err
 	}
@@ -52,28 +56,26 @@ func (h *Handler) PostTasks(_ context.Context, request tasks.PostTasksRequestObj
 		Id:     &createdTask.ID,
 		Task:   &createdTask.Task,
 		IsDone: &createdTask.IsDone,
+		UserId: &createdTask.UserID,
 	}
 
 	return response, nil
 }
-func (h *Handler) DeleteTasksId(ctx context.Context, request tasks.DeleteTasksIdRequestObject) (tasks.DeleteTasksIdResponseObject, error) {
 
+func (h *Handler) DeleteTasksId(ctx context.Context, request tasks.DeleteTasksIdRequestObject) (tasks.DeleteTasksIdResponseObject, error) {
 	taskID := request.Id
 
-	err := h.Service.DeleteTaskByID(taskID)
+	err := h.TaskService.DeleteTaskByID(taskID)
 	if err != nil {
-
 		return nil, err
 	}
-	response := tasks.DeleteTasksId204Response{}
 
+	response := tasks.DeleteTasksId204Response{}
 	return response, nil
 }
 
 func (h *Handler) PatchTasksId(ctx context.Context, request tasks.PatchTasksIdRequestObject) (tasks.PatchTasksIdResponseObject, error) {
-
 	taskID := request.Id
-
 	taskRequest := request.Body
 
 	taskToUpdate := taskService.Task{
@@ -81,7 +83,11 @@ func (h *Handler) PatchTasksId(ctx context.Context, request tasks.PatchTasksIdRe
 		IsDone: *taskRequest.IsDone,
 	}
 
-	updatedTask, err := h.Service.UpdateTaskByID(taskID, taskToUpdate)
+	if taskRequest.UserId != nil {
+		taskToUpdate.UserID = *taskRequest.UserId
+	}
+
+	updatedTask, err := h.TaskService.UpdateTaskByID(taskID, taskToUpdate)
 	if err != nil {
 		return nil, err
 	}
@@ -90,6 +96,30 @@ func (h *Handler) PatchTasksId(ctx context.Context, request tasks.PatchTasksIdRe
 		Id:     &updatedTask.ID,
 		Task:   &updatedTask.Task,
 		IsDone: &updatedTask.IsDone,
+		UserId: &updatedTask.UserID,
 	}
+
+	return response, nil
+}
+
+func (h *Handler) GetUsersIdTasks(ctx context.Context, request tasks.GetUsersIdTasksRequestObject) (tasks.GetUsersIdTasksResponseObject, error) {
+	userID := request.Id
+
+	userTasks, err := h.UserService.GetTasksForUser(userID)
+	if err != nil {
+		return nil, err
+	}
+
+	response := tasks.GetUsersIdTasks200JSONResponse{}
+	for _, tsk := range userTasks {
+		task := tasks.Task{
+			Id:     &tsk.ID,
+			Task:   &tsk.Task,
+			IsDone: &tsk.IsDone,
+			UserId: &tsk.UserID,
+		}
+		response = append(response, task)
+	}
+
 	return response, nil
 }
